# skills-common

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
client/: CMakeLists.txt  GenericSkillClient.cpp  SkillClient.cpp  SkillClientParameter.cpp
client/gripper/: GripperSkillClient.cpp
client/include/common/client/: GenericSkillClient.h  SkillClient.h  SkillClientParameter.h
client/include/common/client/gripper/: GripperSkillClient.h
client/include/common/client/robot/: CartesianLinearForceMoveSkillClient.h  CartesianLinearMoveSkillClient.h  CartesianMoveSkillClient.h  CartesianPtpMoveSkillClient.h  ForceSkillClient.h  JointLinearMoveSkillClient.h  JointMoveSkillClient.h  JointPtpMoveSkillClient.h  LinearMoveSkillClient.h  MoveSkillClient.h  PtpMoveSkillClient.h  RobotClient.h
client/include/common/client/sensor/: ForceTorqueSensorClient.h
client/robot/: CartesianLinearForceMoveSkillClient.cpp  CartesianLinearMoveSkillClient.cpp  CartesianMoveSkillClient.cpp  CartesianPtpMoveSkillClient.cpp  ForceSkillClient.cpp  JointLinearMoveSkillClient.cpp  JointMoveSkillClient.cpp  JointPtpMoveSkillClient.cpp  LinearMoveSkillClient.cpp  MoveSkillClient.cpp  PtpMoveSkillClient.cpp  RobotClient.cpp
client/sensor/: ForceTorqueSensorClient.cpp
cmake/: model_compiler.cmake
include/common/: component.h  logging.h  logging_opcua.h  rlCoachWrapper.hpp  synchronized.hpp
include/common/opcua/: FiniteStateMachine.hpp  Program.hpp  ProgramState.hpp  ProgramTransition.hpp  helper.hpp
include/common/opcua/gripper/: RLGripperControl.hpp  RLGripperGraspImpl.hpp  RLGripperImpl.hpp  RLGripperReleaseImpl.hpp  later.hpp
include/common/opcua/robot/: CartesianForceTorqueActuator.hpp  CartesianPositionLinearActuator.hpp  CartesianVelocityActuator.hpp  Interpolator.hpp  JointPositionLinearActuator.hpp  LinearInterpolator.hpp  OpcUAMotionDevice.hpp  PtpInterpolator.hpp  RLRobotControl.hpp  RLRobotDevice.hpp  RLRobotMove.hpp
include/common/opcua/robot/impl/: CartesianLinearMoveImpl.hpp  CartesianPtpMoveImpl.hpp  JointLinearMoveImpl.hpp  JointPtpMoveImpl.hpp  RLSkillImpl.hpp
include/common/opcua/sensor/: ForceTorqueSensor.hpp  ForceTorqueSensorSim.hpp
include/common/opcua/server/: DeviceVariable.h  OpcUaServer.h
include/common/opcua/skill/: SkillBase.hpp  SkillImpl.hpp  SkillParameter.hpp  SkillRunMutex.hpp
include/common/opcua/skill/gripper/: GraspReleaseGripperSkill.hpp
include/common/opcua/skill/robot/: CartesianLinearMoveSkill.hpp  CartesianMoveSkill.hpp  CartesianPtpMoveSkill.hpp  JointLinearMoveSkill.hpp  JointMoveSkill.hpp  JointPtpMoveSkill.hpp  LinearMoveSkill.hpp  MoveSkill.hpp  PtpMoveSkill.hpp
nodeset/: CMakeLists.txt
server/: DeviceVariable.cpp  OpcUaServer.cpp
skill_detector/: CMakeLists.txt  RegisteredComponent.cpp  RegisteredSkill.cpp  SkillDetector.cpp  SkillParameter.cpp
skill_detector/include/common/skill_detector/: RegisteredComponent.h  RegisteredSkill.h  SkillDetector.h  SkillHelper.hpp  SkillParameter.h
test/: CMakeLists.txt  all_headers.h.in  test_headers.cpp
tools/: ci_check.sh  create_self-signed.py  install_cli11.sh  install_open62541.sh  install_rl.sh  ssl_host.cnf
